# memebin

./: .gitignore  Cargo.toml  Dockerfile  tailwind.config.js
assets/js/: infiniteScroll.js  timeSince.js
src/: error.rs  main.rs  media.rs
src/api/: memes.rs  mod.rs
src/frontend/: home.rs  memes.rs  mod.rs
templates/: base.html
templates/pages/: home.html  meme.html
templates/partials/: header.html  navbar.html
