[package]
name = "memebin"
version = "0.1.0"
authors = ["Atakku <atakkudev@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.11.1"
actix-web = "3.3.2"
actix-http = "2.2.0"
actix-files = "0.5.0"
diesel = { version = "1.4.6", features = ["mysql", "serde_json", "r2d2", "chrono"] }
askama = { version = "0.8", features = ["with-actix-web"]}
lazy_static = "1.4.0"
chrono = { version = "0.4.0", features = ["serde"] }
serde = "1.0.125"
serde_json = "1.0.64"
serde_derive = "1.0.125"
failure = "0.1.8"
mime = "0.3.16"
env_logger = "0.8.3"
derive_more = "0.99.13"